Fix main-content alignment

--- a/style.css
+++ b/style.css
@@ -312,6 +312,7 @@ input[type="range"] {
     font-size: 16px;
     gap: 2em;
     font-weight: 600;
+    padding-left: 0;
   }
 
   .line-switch {
